--- a/app/src/main/res/layout/activity_originality_detail.xml
+++ b/app/src/main/res/layout/activity_originality_detail.xml
@@ -1,30 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/activity_originality_detail"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ddgj.dd.activity.OriginalityDetailActivity"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <!--<android.support.v7.widget.Toolbar-->
-        <!--android:id="@+id/toolbar"-->
-        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:background="@color/colorPrimary"-->
-        <!--app:navigationIcon="?attr/homeAsUpIndicator"-->
-        <!--app:theme="@style/Theme.AppCompat.NoActionBar">-->
+    android:orientation="vertical">
 
-    <!--</android.support.v7.widget.Toolbar>-->
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:theme="@style/Theme.AppCompat.Light.NoActionBar"
+    <include layout="@layout/toolbar"></include>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        android:minHeight="?attr/actionBarSize">
-    </android.support.v7.widget.Toolbar>
+        android:layout_marginBottom="45dp"
+        android:layout_marginTop="58dp">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <RelativeLayout android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="@android:color/white">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vp_image"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"/>
+            <TextView
+                android:id="@+id/tv_page_number"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="8dp"
+                android:background="@drawable/shape_circle_textview_bg"
+                android:gravity="center"
+                android:padding="8dp"
+                android:text="1/3"
+                android:textColor="@android:color/white"/>
+        </RelativeLayout>
+            <TextView
+                android:id="@+id/tv_originality_name"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="自动遥控沙发"
+                android:textColor="@color/black"
+                android:textSize="22sp"/>
+            <TextView
+                android:id="@+id/tv_publish_time"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="发布时间："
+                android:textSize="14sp"/>
+          <RelativeLayout
+              android:gravity="center"
+              android:layout_width="match_parent"
+              android:elevation="2dp"
+              android:layout_height="30dp">
+              <TextView
+                  android:id="@+id/tv_publisher"
+                  android:layout_marginLeft="5dp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="发布人："
+                  android:textColor="@color/black"
+                  android:textSize="14sp"/>
+              <ImageView
+                  android:id="@+id/iv_chat"
+                  android:clickable="true"
+                  android:layout_alignParentRight="true"
+                  android:layout_marginRight="20dp"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:src="@mipmap/ic_textsms_grey600_24dp"
+                  android:background="@drawable/ripple_bg"/>
+          </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="8dp"
+            android:layout_above="@+id/view4"
+
+            android:background="#22000000"/>
+            <TextView
+                android:id="@+id/tv_originality_type"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="创意类型："
+                android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/tv_originality_type_text"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型："
+                android:textSize="14sp"/>
+            <TextView
+                android:id="@+id/tv_originality_intro"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="创意介绍："
+                android:textSize="16sp"/>
+            <TextView
+                android:id="@+id/tv_originality_intro_text"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型："
+                android:textSize="14sp"/>
+            <TextView
+                android:id="@+id/tv_originality_desc"
+                android:layout_marginLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:text="创意描述："
+                android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/tv_originality_desc_text"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型：创意类型："
+                android:textSize="14sp"/>
+
+        </LinearLayout>
+    </ScrollView>
+
+
+
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_above="@+id/view4"
+        android:background="@drawable/up_shadow"></View>
+
+    <RelativeLayout
+        android:id="@+id/view4"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_love"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/ripple_bg"
+            android:clickable="true"
+            android:src="@mipmap/love" />
+
+        <ImageView
+            android:id="@+id/iv_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_toRightOf="@id/iv_love"
+            android:background="@drawable/ripple_bg"
+            android:clickable="true"
+            android:src="@mipmap/comment" />
+
+        <LinearLayout
+
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true">
+
+            <TextView
+                android:id="@+id/tv_collect"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/ripple_bg"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:text="收藏"
+                android:textColor="#8a8a8a"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_collect_number"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:gravity="center_vertical"
+                android:text="120"
+                android:textColor="#8a8a8a"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_point"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:gravity="center_vertical"
+                android:text="·"
+                android:textColor="#8a8a8a"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_comment"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/ripple_bg"
+                android:clickable="true"
+                android:gravity="center_vertical"
+                android:text="评论"
+                android:textColor="#8a8a8a"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tv_comment_number"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:gravity="center_vertical"
+                android:text="10"
+                android:textColor="#8a8a8a"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+
+    </RelativeLayout>
 </RelativeLayout>
