--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -16,7 +16,7 @@
         android:background="@color/white"
         android:elevation="2dp"
         app:contentInsetStartWithNavigation="0dp"
-        app:navigationIcon="@mipmap/ic_blue_back"
+        app:navigationIcon="@drawable/ic_back_blue"
         app:titleTextColor="@color/colorPrimary">
         <EditText android:id="@+id/search_edit_text"
                   android:layout_width="match_parent"
@@ -28,6 +28,7 @@
                   android:singleLine="true"/>
 
     </android.support.v7.widget.Toolbar>
+    <View style="@style/LineGrey1px"/>
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"
