--- a/app/src/main/res/layout/item_orders.xml
+++ b/app/src/main/res/layout/item_orders.xml
@@ -4,11 +4,11 @@
               android:layout_height="match_parent"
               android:orientation="horizontal">
     <ImageView android:id="@+id/img"
-               android:layout_width="80dp"
-               android:layout_height="80dp"
+               android:layout_width="100dp"
+               android:layout_height="100dp"
                android:scaleType="centerCrop"/>
     <LinearLayout android:layout_width="match_parent"
-                  android:layout_height="80dp"
+                  android:layout_height="100dp"
                   android:orientation="vertical"
                   android:padding="8dp">
         <TextView
@@ -17,15 +17,19 @@
             android:layout_height="0dp"
             android:layout_marginBottom="4dp"
             android:layout_weight="1"
+            android:textSize="18dp"
             android:gravity="center_vertical"
             android:text="title"
             android:textColor="@android:color/black"/>
         <TextView
             android:id="@+id/tv_status"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="4dp"
+            android:paddingLeft="4dp"
+            android:background="@color/blue"
             android:text="已接单"
-            android:textColor="@android:color/holo_red_dark"/>
+            android:textColor="@android:color/white"/>
         <TextView
             android:id="@+id/time"
             android:layout_width="match_parent"
